Add dummy login endpoint
